--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,10 @@
             
             <form>
                 <h1>Sign Up</h1>
-
+                <div class="input-container">
+                    <input type="text" id="text" placeholder="Name" required>
+                </div>
+                
                 <div class="input-container">
                     <input type="email" id="email" placeholder="Email" required>
                 </div>
