frontend: rename folder

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -14,7 +14,7 @@
         <div class="container">
             
             <form>
-                <img src="./assets/logo.png" alt="" class="logo">
+                <img src="./images/logo.png" alt="" class="logo">
                 
                 <div class="input-container">
                     <input type="email" id="email" placeholder="Email" required>
