frontend: add users part

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -37,6 +37,20 @@
 
       <!-- Start Main Part -->
     <section class="main">
+        <div class="row">
+            <div class="column">
+                <div class="image-user">
+                  <img src="./images/logo.png" alt="" />
+                </div>
+            
+                <div class="info">
+                    <div class="info-details">
+                       <h1>Name</h1>
+                       <span class="icons"><i class="fa fa-heart-o"></i></span> 
+                    </div>
+                </div>
+              </div>
+        </div>
     </section>
     <!-- End Main Part -->
 </body>
