--- a/frontend/home.html
+++ b/frontend/home.html
@@ -45,8 +45,12 @@
             
                 <div class="info">
                     <div class="info-details">
-                       <h1>Name</h1>
-                       <span class="icons"><i class="fa fa-heart-o"></i></span> 
+                       <h3>Name</h3>
+                       <br>
+                       <div class="icons">
+                            <span><i class="fa fa-heart-o"></i></span>
+                            <span><i class="fa fa-comment-o"></i></span>
+                       </div>
                     </div>
                 </div>
               </div>
