--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,20 +26,15 @@
                 <div class="input-container">
                     <input type="password" id="password" placeholder="Password" required>
                 </div>
-
-                <div class="input-container">
-                    <input type="text" id="location" placeholder="Your Location" required>
-                </div>
-
                 <div class="gender">
                     <h4>Choose Your Gender</h4>
                     <div class="group">
                       <div class="gender-input">
-                        <input type="radio" name="gender" value="female" id="female" required/>
+                        <input type="radio" name="my_gender" value="female" id="female" required/>
                         <label for="female">Female</label>
                       </div>
                       <div class="gender-input">
-                        <input type="radio" name="gender" value="male" id="male" required/>
+                        <input type="radio" name="my_gender" value="male" id="male" required/>
                         <label for="male">Male</label>
                       </div>
                     </div>
@@ -62,6 +57,8 @@
                       </div>
                     </div>
                 </div>
+                <h1 id="add_location">Add Location</h1>
+                <h4 id="state"></h4>
                 <button type="submit" class="submit">Sign Up</button>
 
                 <div class="login">
@@ -72,6 +69,6 @@
             </form>
         </div>
     </div>
-
+    <script src="scripts/AddLocation.js"></script>
 </body>
 </html>
