--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
             <form>
                 <h1>Sign Up</h1>
                 <div class="input-container">
-                    <input type="text" id="text" placeholder="Name" required>
+                    <input type="text" id="name" placeholder="Name" required>
                 </div>
                 
                 <div class="input-container">
@@ -26,15 +26,20 @@
                 <div class="input-container">
                     <input type="password" id="password" placeholder="Password" required>
                 </div>
+
+                <div class="input-container">
+                  <input type="text" id="location" placeholder="Your Location" required>
+                </div>
+
                 <div class="gender">
                     <h4>Choose Your Gender</h4>
                     <div class="group">
                       <div class="gender-input">
-                        <input type="radio" name="my_gender" value="female" id="female" required/>
+                        <input type="radio" name="user_gender" value="female" id="female" required/>
                         <label for="female">Female</label>
                       </div>
                       <div class="gender-input">
-                        <input type="radio" name="my_gender" value="male" id="male" required/>
+                        <input type="radio" name="user_gender" value="male" id="male" required/>
                         <label for="male">Male</label>
                       </div>
                     </div>
@@ -44,22 +49,17 @@
                     <h4>Choose Gender You Are Interested In</h4>
                     <div class="group">
                       <div class="gender-input">
-                        <input type="radio" name="gender" value="0" id="female" required/>
+                        <input type="radio" name="interested_gender" value="female" id="interested-female" required/>
                         <label for="female">Female</label>
                       </div>
                       <div class="gender-input">
-                        <input type="radio" name="gender" value="1" id="male" required/>
+                        <input type="radio" name="interested_gender" value="male" id="interested-male" required/>
                         <label for="male">Male</label>
-                      </div>
-                      <div class="gender-input">
-                        <input type="radio" name="gender" value="2" id="both" required/>
-                        <label for="both">Both</label>
                       </div>
                     </div>
                 </div>
-                <h1 id="add_location">Add Location</h1>
-                <h4 id="state"></h4>
-                <button type="submit" class="submit">Sign Up</button>
+
+                <button type="submit" class="submit" id="signup">Sign Up</button>
 
                 <div class="login">
                     <span>Already A User?</span>
@@ -69,6 +69,8 @@
             </form>
         </div>
     </div>
-    <script src="scripts/AddLocation.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+    <script type="module" src="scripts/index.js"></script>
+
 </body>
 </html>
