--- a/frontend/login.html
+++ b/frontend/login.html
@@ -24,7 +24,7 @@
                     <input type="password" id="password" placeholder="Password" required>
                 </div>
 
-                <button type="submit" class="submit">Log In</button>
+                <button type="submit" id="login-btn" class="submit">Log In</button>
 
                 <div class="login">
                     <span>No Account?</span>
@@ -34,6 +34,7 @@
             </form>
         </div>
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+    <script type="module" src="scripts/index.js"></script>
 </body>
 </html>
