frontend: add logout

--- a/frontend/chat.html
+++ b/frontend/chat.html
@@ -30,7 +30,7 @@
             <i class="fa fa-heart"></i>
             <span>Favorite</span>
           </a>
-          <button class="logout-button">Logout</button>
+          <button class="logout-button" id="logout-btn">Logout</button>
         </div>
       </section>
       <!-- End Navigation Bar Column -->
