--- a/frontend/favorite.html
+++ b/frontend/favorite.html
@@ -30,32 +30,19 @@
             <i class="fa fa-heart"></i>
             <span>Favorite</span>
           </a>
-          <button class="logout-button">Logout</button>
+          <button class="logout-button" id="logout-btn">Logout</button>
         </div>
       </section>
       <!-- End Navigation Bar Column -->
 
       <!-- Start Main Part -->
     <section class="main">
-        <div class="row">
-            <div class="column">
-                <div class="image-user">
-                  <img src="./images/logo.png" alt="" />
-                </div>
+        <div class="row" id="favorites-row">
             
-                <div class="info">
-                    <div class="info-details">
-                       <h3>Name</h3>
-                       <br>
-                       <div class="icons">
-                            <span><i class="fa fa-heart-o"></i></span>
-                            <span><i class="fa fa-comment-o"></i></span>
-                       </div>
-                    </div>
-                </div>
-              </div>
         </div>
     </section>
     <!-- End Main Part -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+    <script type="module" src="scripts/index.js"></script>
 </body>
 </html>
