frontend: add link

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,7 +63,7 @@
 
                 <div class="login">
                     <span>Already A User?</span>
-                    <button>Login</button>
+                    <a href="login.html">Login</a>
                 </div>
 
             </form>
