--- a/frontend/login.html
+++ b/frontend/login.html
@@ -28,7 +28,7 @@
 
                 <div class="login">
                     <span>No Account?</span>
-                    <button>Sign Up</button>
+                    <a href="index.html">Sign Up</a>
                 </div>
 
             </form>
