--- a/frontend/chat.html
+++ b/frontend/chat.html
@@ -30,6 +30,10 @@
             <i class="fa fa-heart"></i>
             <span>Favorite</span>
           </a>
+          <a href="chat.html">
+            <i class="fa fa-comment"></i>
+            <span>Chat</span>
+          </a>
           <button class="logout-button" id="logout-btn">Logout</button>
         </div>
       </section>
@@ -47,13 +51,15 @@
                     </ul> 
                   </div>
                   <div class="chat-box-input input-container-msg">
-                        <input type="text" id="message" placeholder="Message" required>
-                        <button type="submit">Send</button>
+                        <input type="text" id="message-text" placeholder="Message" required>
+                        <button type="submit" id="sendmsg">Send</button>
                   </div>
                 </div>                      
             </div>
         </div>
     </section>
     <!-- End Main Part -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+    <script type="module" src="scripts/index.js"></script>
 </body>
 </html>
