--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -30,6 +30,10 @@
             <i class="fa fa-heart"></i>
             <span>Favorite</span>
           </a>
+          <a href="chat.html">
+            <i class="fa fa-comment"></i>
+            <span>Chat</span>
+          </a>
           <button class="logout-button" id="logout-btn">Logout</button>
         </div>
       </section>
