--- a/frontend/chat.html
+++ b/frontend/chat.html
@@ -42,12 +42,17 @@
       <!-- Start Main Part -->
     <section class="main">
         <div class="row">
+            <div class="users" id="user-id">
+              <ul id="receiver">
+                
+              </ul>
+            </div>
             <div class="chat-box" id="chat">
                 <div class="chats">
                   <div class="chat-box-messages">
                     <ul id="chat-box">
-                        <li class="sender">Hi</li>
-                        <li class="reciever">Hi</li>
+                        <!-- <li class="sender">Hi</li>
+                        <li class="reciever">Hi</li> -->
                     </ul> 
                   </div>
                   <div class="chat-box-input input-container-msg">
