--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -34,6 +34,10 @@
             <i class="fa fa-comment"></i>
             <span>Chat</span>
           </a>
+          <a href="blocked.html">
+            <i class="fa fa-ban"></i>
+            <span>Blocked Users</span>
+          </a>
           <button class="logout-button" id="logout-btn">Logout</button>
         </div>
       </section>
