frontend: change style ui

--- a/frontend/blocked.html
+++ b/frontend/blocked.html
@@ -34,7 +34,7 @@
             <i class="fa fa-comment"></i>
             <span>Chat</span>
           </a>
-          <a href="blocked.html">
+          <a href="blocked.html" class="clicked">
             <i class="fa fa-ban"></i>
             <span>Blocked Users</span>
           </a>
