--- a/frontend/home.html
+++ b/frontend/home.html
@@ -18,7 +18,7 @@
           <a href="">
             <img src="./images/logo.png" alt="" class="logo-small">
           </a>
-          <a href="home.html">
+          <a href="home.html" class="clicked">
             <i class="fa fa-home"></i>
             <span>Home</span>
           </a>
