--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -22,7 +22,7 @@
             <i class="fa fa-home"></i>
             <span>Home</span>
           </a>
-          <a href="profile.html">
+          <a href="profile.html" class="clicked">
             <i class="fa fa-user"></i>
             <span>Profile</span>
           </a>
