--- a/frontend/chat.html
+++ b/frontend/chat.html
@@ -30,7 +30,7 @@
             <i class="fa fa-heart"></i>
             <span>Favorite</span>
           </a>
-          <a href="chat.html">
+          <a href="chat.html" class="clicked">
             <i class="fa fa-comment"></i>
             <span>Chat</span>
           </a>
