--- a/frontend/favorite.html
+++ b/frontend/favorite.html
@@ -26,7 +26,7 @@
             <i class="fa fa-user"></i>
             <span>Profile</span>
           </a>
-          <a href="favorite.html">
+          <a href="favorite.html" class="clicked">
             <i class="fa fa-heart"></i>
             <span>Favorite</span>
           </a>
