--- a/frontend/home.html
+++ b/frontend/home.html
@@ -50,6 +50,23 @@
         </div>
     </section>
     <!-- End Main Part -->
+
+    <!-- Pop Up -->
+    <section class="popup" id="pop-inform">
+      <div class="bar">
+        <button class="close-btn" id="close-btn">
+          <i class="fa fa-times fa-2x" aria-hidden="true"></i>
+        </button>
+        <img src="./images/logo.png" alt="" class="logo-small">
+      </div>
+      
+      <!-- Form Inform -->
+      <div action="" id="form" class="infos">
+        <h2 id="inform-status"></h2>
+        <br>
+        <button id="ok-btn" class="submit">OK</button>
+      </div>
+    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
     <script type="module" src="scripts/index.js"></script>
 </body>
